# dachjob.ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md
.github/: copilot-instructions.md  (+1 more)
app/backend/: Dockerfile  pyproject.toml
app/backend/app/: main.py
app/backend/app/core/: auth.py  config.py  email.py  errors.py  logging.py  rate_limit.py  redis_client.py  request_logging.py  security.py  tenant.py
app/backend/app/db/: models.py  seed_demo.py  session.py
app/backend/app/db/migrations/: alembic.ini  env.py
app/backend/app/modules/auth/: api_keys.py  dependencies.py  routes.py  schemas.py
app/backend/app/modules/background_tasks/: execution.py  repository.py  routes.py  schemas.py  service.py
app/backend/app/modules/jobs/: extractor.py  fetcher.py  import_service.py  importer.py  location_country.py  repository.py  routes.py  schemas.py  source_parsers.py
app/backend/app/modules/llm_gateway/: fake_provider.py  gateway.py  routes.py  schemas.py
app/backend/app/modules/matching/: jd_parser.py  match_scorer.py  routes.py  schemas.py  service.py  skill_taxonomy.py
app/backend/app/modules/profiles/: extractor.py  repository.py  routes.py  schemas.py
app/backend/app/modules/resumes/: artifacts.py  prompt_builder.py  renderer_html.py  renderer_pdf.py  routes.py  schemas.py  service.py
app/backend/app/modules/storage/: service.py
app/backend/app/modules/tenants/: repository.py  routes.py  schemas.py
app/backend/app/modules/tracker/: autofill.py  repository.py  routes.py  schemas.py
app/backend/app/workers/: celery_app.py  tasks.py
app/backend/tests/: test_auth_security.py  test_background_tasks.py  test_jd_format.py  test_jd_parser_refactor.py  test_job_country_filters.py  test_job_status_filters.py  test_llm_gateway.py  test_provider_smoke.py  test_rate_limit.py  test_resume_profile_selection.py  test_resume_service_refactor.py  test_storage_config.py
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: errors.py  security.py  telemetry.py  tenant.py
apps/api/app/db/: models.py  seed_demo.py
apps/api/app/db/migrations/: env.py
apps/api/app/modules/jobs/: repository.py  routes.py  schemas.py
apps/api/app/modules/llm_gateway/: gateway.py  schemas.py
apps/api/app/modules/matching/: routes.py  service.py
apps/api/app/workers/: celery_app.py
(+347 files in other folders)
