[project]
name = "dachjob-api"
version = "0.1.0"
description = "dachjob.ai Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings",
    "sqlalchemy>=2.0",
    "alembic",
    "psycopg[binary]>=3.1",
    "asyncpg>=0.29",
    "celery>=5.4",
    "redis>=5.0",
    "openai>=1.0",
    "boto3>=1.34",
    "python-multipart",
    "pyyaml",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
